# Macro-Deck-Driver

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: config-generator.yml
assets/: index-BmZ6Izg1.css  index-DApX40V7.js
config-generator/: index.html  package.json
config-generator/src/: App.css  App.tsx  index.css  index.tsx
src/: lib.rs  main.rs
src/cli/: background_start.rs  flash.rs  list.rs  message.rs  mod.rs  models.rs  start.rs  stop.rs  tools.rs
src/driver/: macro_deck.rs  message.rs  mod.rs
