[package]
name = "macro-deck-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
nix = { version = "0.30.1", features = ["process"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serialport = "4.7.1"
